kotlin-ide/idea/testData/multiplatform/constructorsOfExpect/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>A<!> {
    fun <!LINE_MARKER("descr='Has actuals in JVM'")!>commonMember<!>()
}
